--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="/">Home</a></li>
-              <li class="active"><a href="/">About</a></li>
+              <li class="active"><a href="/about.html">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
