--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,6 @@ body {
 #footer {
   height: 60px;
   background-color: #d5d5d5;
-  position: fixed;
-  bottom: 0px;
   width: 100%;
 }
 
@@ -36,19 +34,21 @@ body {
 .container {
   width: auto;
   max-width: 960px;
-  padding: 0 15px;
+  padding: 0 10px;
 }
 .container .text-muted {
   margin: 20px 0;
 }
-
+.postli{
+  list-style: none;  
+}
 .postCell{
-  list-style: none;
   min-height:200px;
-  border: solid 1px #f5f5f5;
+  padding: 10px;
+  border: solid 1px #ddd;
 }
 .postCell:hover{
-  border:solid 1px #ddd;
+  border:solid 1px #888;
 }
 #footer td{
   height: 55px;
