--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
   padding-top: 50px;
   height: 100%;
   background-color:#f5f5f5;
+  font-family:  arial, 'Microsoft Yahei', 'Hiragino Sans GB', sans-serif;
   /* The html and body elements cannot have any padding or margin. */
 }
 
